Add dataclasses to simplify module consumption Use md5 hash as answer_id, it allows to see enstantly if the text of two ansers is equal Refactor module names and method descriptors Refactor configuration

--- a/python/config.json
+++ b/python/config.json
@@ -1,8 +1,10 @@
 {
-	"data_path": "../data/",
-	"model_path": "../models/v1",
+	"data_path": "../data",
+	"model_path": "../models",
+	"trained_bert_version": "v1",
+	"alpaca_7B": "chavinlo/alpaca-native",
 	"questions": "questions.tsv",
 	"answers": "answers.tsv",
 	"answers_to_rate": "to_be_rated.tsv",
-	"rated_answers": "rated.tsv"
+	"rated_answers": "rated_#.tsv"
 }
