--- a/python/environment.yaml
+++ b/python/environment.yaml
@@ -5,6 +5,10 @@ channels:
 dependencies:
   - python>=3.9
   - openai
-  - pytorch
-  # - cudatoolkit   # If using GPU
-  - transformers
+  - scikit-learn
+  - pytorch=1.8.1
+  #- cudatoolkit=11.1
+  - pip
+  - pip:
+    - transformers==4.9.1
+    - pandas
