Refactor answer generation
Aplit generation and annotation into two modules
Add retry if one request fails or produces invalid results
Save valid results as soon as they become available

This reduces waste and improves efficiency

--- a/python/config.json
+++ b/python/config.json
@@ -5,7 +5,9 @@
 	"alpaca_7B": "chavinlo/alpaca-native",
 	"questions": "questions.tsv",
 	"ai_answers": "ai_answers.tsv",
+	"ai_unrated_answer_path": "ai_unrated_answer_path.tsv",
 	"man_answers": "man_answers.tsv",
+	"key_elements": "key_elements.tsv",
 	"answers_to_rate": "to_be_rated.tsv",
 	"rated_answers": "rated_#.tsv"
 }
