Add xg_boost as model to be trained Fix various issues

--- a/python/environment.yaml
+++ b/python/environment.yaml
@@ -10,6 +10,7 @@ dependencies:
   - accelerate>=0.20.1 # added
   #- cudatoolkit=11.1
   - tiktoken
+  - xgboost
   - pip
   - pip:
     - transformers
