--- a/python/config.json
+++ b/python/config.json
@@ -5,17 +5,13 @@
 	"trained_xg_boost_version": "xgb_v1",
 	"alpaca_7B": "chavinlo/alpaca-native",
 	"questions": "questions.tsv",
-	"ai_answers": "ai_answers#.tsv",
-	"ai_answers_for_training": "ai_answers_for_training.tsv",
-	"ai_answers_to_rate": "ai_answers_to_rate.tsv",
-	"ai_unrated_answer_path": "ai_unrated_answer.tsv",
-	"man_answers": "man_answers.tsv",
-	"man_answers_src": "train.tsv",
-	"ai_rated_man_answers": "ai_rated_man_answers.tsv",
-	"man_answers_for_training": "man_answers_for_training.tsv",
-	"man_answers_to_rate": "man_answers_to_rate.tsv",
+	"samples": "samples#.tsv",
+	"samples_for_training": "samples_for_training#.tsv",
+	"samples_for_testing": "samples_for_testing#.tsv",
+	"unrated_samples_path": "unrated_samples.tsv",
+	"expert_samples_src": "train.tsv",
 	"key_elements": "key_elements.tsv",
-	"rated_answers": "rated_#.tsv",
+	"test_results": "test_results#.tsv",
 	"ttr_calculations": "ttr_calculations.tsv",
 	"distribution": "distribution.txt",
 	"batch_sizes": [{"size":50, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":100, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":200, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":400, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":800, "ids":["A"]}, {"size":1600, "ids":["A"]}, {"size":3200, "ids":["A"]}]
