Refactor code and add documentation

--- a/python/config.json
+++ b/python/config.json
@@ -3,7 +3,6 @@
 	"model_path": "../models",
 	"trained_bert_version": "bert_v1",
 	"trained_xg_boost_version": "xgb_v1",
-	"alpaca_7B": "chavinlo/alpaca-native",
 	"questions": "questions.tsv",
 	"samples": "samples#.tsv",
 	"samples_for_training": "samples_for_training#.tsv",
@@ -12,7 +11,8 @@
 	"expert_samples_src": "train.tsv",
 	"key_elements": "key_elements.tsv",
 	"test_results": "test_results#.tsv",
-	"ttr_calculations": "ttr_calculations.tsv",
+	"lr_calculations": "lexical_richness_calculations.tsv",
+	"qwk_path": "qwk.tsv",
 	"distribution": "distribution.txt",
-	"batch_sizes": [{"size":50, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":100, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":200, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":400, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":800, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":1600, "ids":["A"]}, {"size":3200, "ids":["A"]}]
+	"batches": [{"size":50, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":100, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":200, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":400, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":800, "ids":["A", "B", "C", "D", "E", "F"]}, {"size":1600, "ids":["A"]}, {"size":3200, "ids":["A"]}]
 }
