--- a/python/config.json
+++ b/python/config.json
@@ -3,7 +3,7 @@
 	"model_path": "../models",
 	"lr_path": "lr",
 	"qwk_path": "qwk",
-	"test_results_path": "results",
+	"test_results_path": "test_results",
 	"trained_bert_version": "bert_v1",
 	"trained_xg_boost_version": "xgb_v1",
 	"questions": "questions.tsv",
